# xchange

./: CHANGELOG.md  CMakeLists.txt  Makefile  README.md  config.mk
.github/workflows/: indexnow.yml
cmake/: xchangeConfig.cmake.in
doc/: Doxyfile
doc/src/: docedit.c
examples/: CMakeLists.txt  example-json.c
include/: xchange.h  xjson.h  xmutex.h
src/: xchange.c  xjson.c  xlookup.c  xstruct.c
test/: test-json.c  test-lookup.c
